--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "It is a API for books",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon server.ts"
   },
   "keywords": [
     "rest",
@@ -13,9 +14,13 @@
   "author": "Shreyansh Patel",
   "license": "ISC",
   "devDependencies": {
+    "@eslint/js": "^9.5.0",
     "@types/node": "^20.14.9",
+    "eslint": "^9.5.0",
+    "globals": "^15.6.0",
     "nodemon": "^3.1.4",
     "ts-node": "^10.9.2",
-    "typescript": "^5.5.2"
+    "typescript": "^5.5.2",
+    "typescript-eslint": "^7.14.1"
   }
 }
