--- a/package.json
+++ b/package.json
@@ -15,12 +15,15 @@
   "license": "ISC",
   "devDependencies": {
     "@eslint/js": "^9.5.0",
+    "@types/express": "^4.17.21",
     "@types/node": "^20.14.9",
-    "eslint": "^9.5.0",
     "globals": "^15.6.0",
     "nodemon": "^3.1.4",
     "ts-node": "^10.9.2",
     "typescript": "^5.5.2",
     "typescript-eslint": "^7.14.1"
+  },
+  "dependencies": {
+    "express": "^4.19.2"
   }
 }
