--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
   "license": "ISC",
   "devDependencies": {
     "@eslint/js": "^9.5.0",
+    "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.21",
+    "@types/http-errors": "^2.0.4",
     "@types/node": "^20.14.9",
     "globals": "^15.6.0",
     "nodemon": "^3.1.4",
@@ -24,6 +26,11 @@
     "typescript-eslint": "^7.14.1"
   },
   "dependencies": {
-    "express": "^4.19.2"
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
+    "http": "^0.0.1-security",
+    "http-error": "^0.0.6",
+    "http-errors": "^2.0.0",
+    "mongoose": "^8.4.4"
   }
 }
