--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/express": "^4.17.21",
     "@types/http-errors": "^2.0.4",
     "@types/jsonwebtoken": "^9.0.6",
+    "@types/multer": "^1.4.11",
     "@types/node": "^20.14.9",
     "globals": "^15.6.0",
     "nodemon": "^3.1.4",
@@ -29,12 +30,14 @@
   "dependencies": {
     "@types/bcrypt": "^5.0.2",
     "bcrypt": "^5.1.1",
+    "cloudinary": "^2.2.0",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "http": "^0.0.1-security",
     "http-error": "^0.0.6",
     "http-errors": "^2.0.0",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.4.4"
+    "mongoose": "^8.4.4",
+    "multer": "^1.4.5-lts.1"
   }
 }
